# Liber_SpeechAPI

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt  run_cli.bat  setup.ps1  setup.sh  start_api.bat  test_cli.bat
docker/: Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml
docs/: API.md  CLI测试使用文档.md  TTS修复总结.md  Web前端界面规划.md  chatterbox-参数说明文档.md  resemble-ai-chatterbox-8a5edab282632443.txt  vaibhavs10-insanely-fast-whisper-8a5edab282632443.txt  前端默认参数集成说明.md  参数管理系统说明.md  实现记录.md  开发计划.md  配置系统修复总结.md
results/: translated.json
scripts/: README.md  download_models.py  run_cli.py  start_api_custom.py  start_api_fixed.py
skills/: liber_speechapi实现.md
skills/liber-speechapi/: .env.example  config.json.example
skills/liber-speechapi/results/: tts_20260408_211610.ogg_opus  tts_20260408_212221.ogg_opus
src/liber_speech/: settings.py
src/liber_speech/api/: app.py  config.py  deps.py  models.py  routes.py
src/liber_speech/cli/: app.py  commands_asr.py  commands_doctor.py  commands_serve.py  commands_tts.py  commands_warmup.py
src/liber_speech/config/: __init__.py  default_params.json  default_params.py  params_manager.py
src/liber_speech/engines/: __init__.py  asr_engine.py  device.py  errors.py  io_types.py  io_utils.py  model_cache.py  tts_engine.py
web/: .gitignore  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css  theme.ts
web/src/docs/: Windows使用指南.md  insanely-fast-whisper-参数说明文档.md
web/src/lib/: api.ts  api_fix.txt  storage.ts  types.ts
(+4 files in other folders)
